<resources>
    <string name="app_name">VirtualSoftKeys</string>

    <!--Permission Dialog-->
    <string name="Permission_draw_overlays_title">1. Draw over other Apps</string>
    <string name="Permission_draw_overlays_content">In order for app to work properly and show the navigation bar (Soft Key Bar) you need to allow the permissions to draw over other apps. \nSettings > Apps > Advanced > Draw over other apps</string>
    <string name="Permission_accessibility_title">2. Accessibility service</string>
    <string name="Permission_accessibility_content">And then enable the Accessibility service. \nSettings > Accessibility > VirtualSoftKeys</string>
    
    <string name="Permission_goto_page">Go to Settings</string>
    <string name="Permission_allow_system_alert_first">Please allow draw over apps permission</string>
    <string name="Permission_allowed">Permission Granted</string>
    <string name="Permission_allow_system_alert_first_and_restart_service">"Please allow this permission first , and select VirtualSoftKeys in accessibility"</string>
    <string name="Toast_allow_system_alert_first">"Please allow draw over apps permission first"</string>


    <!--Accessibility setting-->
    <string name="action_settings">Turn VirtualSoftKey\'s service on or off, Remember if the service is off you cannot use Soft Key Bar in your app.\n Remember, We care about users privacy and do not collect any data from users, this is an open source project and you can find the URL for the project on the main page.</string>

    <!--tablayout & tabs-->

    <string name="config_touch_title">Touch</string>
    <string name="config_function_title">Function</string>
    <string name="config_customizedtheme_title">Theme</string>

    <!--touch fragment-->

    <string name="setting_gesture_height_title">Gesture height:</string>
    <string name="setting_gesture_height_content">The height of touch area</string>
    <string name="setting_gesture_width_title">Gesture width:</string>
    <string name="setting_gesture_width_content">The width of touch area</string>
    <string name="setting_gesture_position_title">Gesture position:</string>
    <string name="setting_gesture_position_content">The position of touch area is</string>

    <string name="config_name_title">Config:</string>
    <string name="config_name_portrait">Portrait</string>
    <string name="config_name_landscape">Landscape</string>

    <!--function fragment-->

    <string name="setting_stylus_mode_title">Stylus mode:</string>
    <string name="setting_stylus_mode_content">Triggered only from device supports stylus (S Pen,z stylus&#8230;etc)</string>
    <string name="setting_stylus_mode_button">Stylus mode</string>

    <string name="config_disappear_time_title">Disappear:</string>
    <string name="config_disappear_time_content">Time for disappearing Softkey bar after the others action</string>

    <string name="setting_reverse_button_title">Reverse button position:</string>
    <string name="setting_reverse_button_content">To change the back and recent button position</string>
    <string name="setting_reverse_button_button">Reverse</string>

    <string name="setting_softkey_bg_title">background:</string>
    <string name="setting_softkey_bg_content">Set Softkey bar\'s background</string>

    <string name="setting_smart_hidden_title">Smart hidden(Beta*):</string>
    <string name="setting_smart_hidden_content">Auto hide the permanent Softkey bar when keyboard open\n(It\'s experimental function , close it if you have any problem)</string>
    <string name="setting_smart_hidden_button">Smart hidden</string>

    <string name="setting_rotate_hidden_title">Rotate hidden:</string>
    <string name="setting_rotate_hidden_content">After screen rotate , the Softkey bar will be hidden</string>
    <string name="setting_rotate_hidden_button">Rotate hidden</string>

    <!--theme fragment-->
    <string name="theme_longclick_action_title">Long click Home action:</string>
    <string name="theme_longclick_action_content">To select action which you want to do when you long click home button.</string>
    <string name="theme_longclick_action_google">Google</string>
    <string name="theme_longclick_action_google_assistant">Google assistant / Google voice</string>

    <!--Description Dialog-->
    <string name="description_howtouse_title">How to use</string>
    <string name="description_howtouse_content">Swiping up in touch view for opening the Softkey bar,then swiping down can cancel</string>
    <string name="description_config_title">Screen config</string>
    <string name="description_config_content">Rotating screen for changing the portrait or landscape config ,they are independent value in every config</string>
    <string name="description_clsoe">Don\'t remind</string>
    <string name="description_i_knew">I knew</string>

    <!--accessibility service error Dialog-->
    <string name="accessibility_service_error_title">Service error</string>
    <string name="accessibility_service_error_content">Service seem has some problem , please help me to open VirtualSoftKeys in accessibility again!</string>
    <string name="accessibility_service_error_go">Go</string>



    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="toolbar_menu_about">About</string>

</resources>
