<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RL_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/config_function_title"
                android:textColor="@android:color/black"
                android:textSize="28sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/setting_stylus_mode_title"
                android:textColor="@android:color/black"
                android:textSize="22sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/setting_stylus_mode_content"
                android:textColor="#828282"
                android:textSize="16sp" />


            <CheckedTextView
                android:id="@+id/CTV_stylus_only_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center"
                android:text="@string/setting_stylus_mode_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:text="@string/config_disappear_time_title"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/config_disappear_time_content"
                    android:textColor="#828282"
                    android:textSize="16sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/SP_bar_disappear_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_bg" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/setting_reverse_button_title"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/setting_reverse_button_content"
                android:textColor="#828282"
                android:textSize="16sp" />

            <CheckedTextView
                android:id="@+id/CTV_reverse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center"
                android:text="@string/setting_reverse_button_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/setting_softkey_bg_title"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/setting_softkey_bg_content"
                android:textColor="#828282"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/softkey_bar_bg_board">

                <ImageView
                    android:id="@+id/IV_bg_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/setting_smart_hidden_title"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/setting_smart_hidden_content"
                android:textColor="#828282"
                android:textSize="16sp" />


            <CheckedTextView
                android:id="@+id/CTV_smart_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center"
                android:text="@string/setting_smart_hidden_button" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:text="@string/setting_rotate_hidden_title"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/setting_rotate_hidden_content"
                    android:textColor="#828282"
                    android:textSize="16sp" />

            </LinearLayout>


            <CheckedTextView
                android:id="@+id/CTV_hidden_when_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center"
                android:text="@string/setting_rotate_hidden_button" />

            <ImageView
                android:id="@+id/IV_my_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_github_logo" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
