<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/LL_long_click_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/config_customizedtheme_title"
            android:textColor="@android:color/black"
            android:textSize="28sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/theme_longclick_action_title"
            android:textColor="@android:color/black"
            android:textSize="22sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:text="@string/theme_longclick_action_content"
            android:textColor="#828282"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/RG_longclick_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/RB_longclick_action_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_longclick_action_google" />

            <RadioButton
                android:id="@+id/RB_longclick_action_google_assistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_longclick_action_google_assistant" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
